Structure backend project, describe installation
sse/api is added for the API endpoints
sse/core is added for the models and further modules

Describe the installation in the README

Also change the way the project is setup for tavis.ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
     - sudo apt-get update
     - pip install --upgrade pip
     - pip install -r requirements.txt
-    - python setup.py install
+    - pip install -e .
 
 script:
     - pytest --doctest-modules
