Add autocompletion endpoint

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 Django
 coveralls
 django-classy-settings
+djangorestframework
+factory-boy
 numpy
 pandas
 pyahocorasick
 pytest
 pytest-cov
+pytest-django
+pytest-factoryboy
 python-dotenv
 requests
